force-app/main/default/objects/Package__c/fields/billableType__c.field-meta.xml
<CustomField>
    <fullName>billableType__c</fullName>
    <label>Billable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>ACCESS_CODE</fullName>
            </value>
            <value>
                <fullName>FOXDEN_USER</fullName>
            </value>
            <value>
                <fullName>S3_USER</fullName>
            </value>
            <value>
                <fullName>ACCOUNT,SEAT</fullName>
            </value>
            <value>
                <fullName>ANY</fullName>
            </value>
            <value>
                <fullName>ACCOUNT,SEAT,ACCESS_CODE</fullName>
            </value>
            <value>
                <fullName>ACCOUNT,SEAT,ACCESS_CODE,FOXDEN_USER</fullName>
            </value>
            <value>
                <fullName>ACCOUNT,SEAT,FOXDEN_USER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>