force-app/main/default/objects/Package__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>Package description. Up to 500 characters</description>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>