force-app/main/default/objects/Package__c/fields/provisioningEmailContext__c.field-meta.xml
<CustomField>
    <fullName>provisioningEmailContext__c</fullName>
    <description>Context to use while rendering the BBS Email Template</description>
    <label>Provisioning Email Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>