force-app/main/default/objects/Package__c/fields/provisioningEmailDescription__c.field-meta.xml
<CustomField>
    <fullName>provisioningEmailDescription__c</fullName>
    <description>A description of this package that can be used in a provisioning e-mail template</description>
    <label>Provisioning Email Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>