force-app/main/default/objects/Package__c/fields/QuantityEnabled__c.field-meta.xml
<CustomField>
    <fullName>QuantityEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuantityEnabled</label>
    <type>Checkbox</type>
</CustomField>