force-app/main/default/objects/Package__c/fields/RT_Package_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_Package_ID__c</fullName>
    <externalId>true</externalId>
    <label>RT Package ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>