force-app/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>description__c</columns>
    <columns>billableType__c</columns>
    <columns>provisioningEmailContext__c</columns>
    <columns>objectId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>